10721
```
% scalac-hash v2.10.2~49 @args.txt
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/time/protocol/TestV1Api.scala:111: error: diverging implicit expansion for type Ordering[T]
starting with method Tuple9 in object Ordering
    val x = arbitraryColumn("V1Protocol.domainRange", testDb)   // COMPILER bug, remove this to fix
                           ^
one error found

% scalac-hash v2.10.2~48 @args.txt
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/time/protocol/TestV1Api.scala:116: error: erroneous or inaccessible type
      data.foreach { datum =>
                           ^
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/time/transform/TestDomainRange.scala:31: error: erroneous or inaccessible type
  def minMaxEvents(events: Seq[Event[Long, Double]]): (Long, Long, Double, Double) = {
                                                                                     ^
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/util/Repeating.scala:21: error: erroneous or inaccessible type
  def repeatWithDelay[T](maxAttempts: Int, delayMsec: Int = 100)(fn: => Option[T]): Option[T] = {
                                                                                                ^
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/util/TestObservableFuture.scala:42: error: erroneous or inaccessible type
  test("future string to observable string") {
                                             ^
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/util/TestPeekIterator.scala:27: error: erroneous or inaccessible type
    peeked(list).toList shouldEqual list
                        ^
5 errors found

% tail -n 20 args.txt
-language:postfixOps
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/graph/TestTemplate.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/DirectoryRegistryFixture.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/SampleData.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestCsvLoad.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestCustomApi.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestDataRestApi.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestDataSet.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestDeepDirectoryRegistry.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestDirectoryBasic.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestDirectoryRegistry.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestHttpServer.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/legacy/TestTsvLoad.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/loader/TestTextTableParser.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/time/protocol/ArbitraryColumn.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/time/protocol/TestV1Api.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/time/transform/TestDomainRange.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/util/Repeating.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/util/TestObservableFuture.scala
/Users/jason/code/sparkle/src/test/scala/nest/sparkle/util/TestPeekIterator.scala

% (cd scala; git show v2.10.2~48)
/code/scala
commit 2ecd09fe1d79371ea5bcc529066d7bda0146cca3
Merge: 14c5027 ef04619
Author: Paul Phillips <paulp@improving.org>
Date:   Fri Apr 19 14:28:07 2013 -0700

    Merge pull request #2370 from retronym/ticket/7319-2

    SI-7319 Avoid unflushed error/warning buffers in startContext
```
